<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_titulo_ed"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editTituloEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_fecha_ed"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editFechaEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="18dp"
                android:hint="@string/txt_hint_dia"
                android:clickable="false"
                android:focusable="false"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_hora_ed"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editHoraEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="18dp"
                android:hint="@string/txt_hint_hora"
                android:clickable="false"
                android:focusable="false"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_desc_ed"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editDescEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_com_ed"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editMultiComEd"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_guardar"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btnEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_editar"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_eliminar"
                android:textSize="18dp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>